# atlasing_pattern_space

./: .gitignore  CRITIQUE_RESPONSE.md  Makefile  README.md  REPO_CLEANUP_SUMMARY.md  ROADMAP.md  ROADMAP_V2.md  WARP.md  aps_cli.py  cleanup_repo.sh  pyproject.toml  test_energy_comparison.py  test_energy_comparison_3d.py  test_energy_detailed_3d.py
docs/: Critique APS.docx  ENERGY_FRAMEWORK_OVERVIEW.md  KEY_CONCEPTS.md  PROJECT_COMPLETION_SUMMARY.md  TOPOLOGY_ENERGY_SUMMARY.md  VISUALIZATION_GUIDE.md  phase006b_m3_performance.md  phase006b_memory_guide.md  phase006b_quickstart.md  phase006b_text_ood.md  topology_energy_guide.md
experiments/: COMPLETE_SUMMARY.md  FINAL_RESULTS.md  PROGRESS_SUMMARY.md  README.md  STATUS.md  analyze_results.py  colored_mnist_ood.py  mnist_ablation.py  mnist_baseline.py  mnist_energy_retune.py  mnist_fewshot.py  mnist_ood.py  mnist_topo_energy.py
paper/: FIGURE_CORRECTIONS.md  UPDATE_INSTRUCTIONS.md  experimental_results_supplement.tex  main.tex  paper_merged.tex  references.bib  section_coloredmnist.tex
scripts/: analyze_experiment.py  analyze_finetune_results.py  analyze_phase006b_results.py  analyze_tc_conflict.py  consolidate_results.py  demo_energy_viz.py  demo_topology_energy.py  generate_corrected_ood_figure.py  generate_corrected_training_dynamics.py  generate_paper_figures.py  interactive_dashboard.py  interactive_dashboard_3d.py  investigate_phase006b.py  run_3d_embedding.py  run_all_finetune_experiments.sh  run_aps_experiment.py  run_colored_mnist.py  run_colored_mnist_v3_anticorr.py  run_energy_demo.py  run_phase006b_all.sh  (+10 more)
(+107 files in other folders)
